# stackstate-etl

./: .gitignore  Gemfile  README.md  _config.local.yml  apply_style.sh  build.py  index.md  pyproject.toml
docs/: README.md  api.md  build.sh  execution_flow.md  getting_started.md  mermaid_seq_diagram.txt
docs/concepts/: concepts.md  datasource.md  expressions.md  pre-post-processors.md  queries.md  refs.md
docs/concepts/template/: index.md
docs/concepts/template/types/: component.md  event.md  health.md  metric.md  processor.md
docs/pdoc_template/: config.mako  head.mako  logo.mako
docs/static/stackstate_etl/: index.html
docs/static/stackstate_etl/cli/: cli_processor.html  index.html  main.html
docs/static/stackstate_etl/etl/: etl_driver.html  index.html  interpreter.html
docs/static/stackstate_etl/model/: etl.html  factory.html  index.html  instance.html  stackstate.html  stackstate_receiver.html
docs/static/stackstate_etl/stackstate/: client.html  index.html
grammar/setl-tmbundle/: info.plist
grammar/setl-tmbundle/Syntaxes/: StackState ETL.tmLanguage  StackState ETL.tmLanguage.json
grammar/setl-vscode/: CHANGELOG.md  language-configuration.json  package.json
grammar/setl-vscode/syntaxes/: setl.tmLanguage.json
src/stackstate_etl/cli/: cli_processor.py
src/stackstate_etl/etl/: etl_driver.py  interpreter.py
src/stackstate_etl/model/: etl.py  factory.py  instance.py  stackstate.py  stackstate_receiver.py
src/stackstate_etl/stackstate/: client.py
stackstate_etl/cli/: cli_processor.py  main.py
stackstate_etl/etl/: etl_driver.py  interpreter.py
stackstate_etl/model/: etl.py  factory.py  instance.py  stackstate.py  stackstate_receiver.py
stackstate_etl/stackstate/: client.py
tasks/: build.py
tasks/py27/: PKG-INFO  setup.py
tests/: 1_sample_host_etl.yaml  2_sample_disk_etl.yaml  sample_etl.yaml  test_stackstate_etl.py
